--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "myblog/static/bower_components"
   ],
   "dependencies": {
     "lumx": "~0.3.95"
